# distributions

./: CMakeLists.txt  README.md  distributions-config.cmake  exponential.c  exponential.h  hypexp.c  hypexp.h  makefile  normal-prob.c  normal.c  poisson.c  poisson.h  test-hypexp-file.txt  uniform.c  weibull.c
tests/: normal-1.correct
